--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,11 @@ openai
 graphdatascience
 retry==0.9.2
 langchain>=0.0.216
+#missing from langchain:
+langchain-openai
+langchain-community
 streamlit==1.23.1
 streamlit-chat==0.0.2.2
 streamlit-chat-media==0.0.4
 python-dotenv==1.0.0
+neo4j
